--- a/src/components/AboutSection/AboutSection.scss
+++ b/src/components/AboutSection/AboutSection.scss
@@ -2,7 +2,7 @@
  * @Author: David M. Rojas Gonzalez // deznorth.com 
  * @Date: 2019-03-05 11:00:49 
  * @Last Modified by: David M. Rojas Gonzalez // deznorth.com
- * @Last Modified time: 2019-03-05 13:58:07
+ * @Last Modified time: 2019-03-05 15:28:40
 */
 
 @import '../../colors';
@@ -26,12 +26,14 @@
         width: 50%;
         height: 20rem;
         margin: 0 1rem 0 1rem;
+        padding: 1.5rem 0 1.5rem 1.5rem;
 
         @media (max-width: 1400px){
             flex-direction: column;
             height: auto;
             width: 90%;
             margin: 1rem 0 1rem 0;
+            padding: 1.5rem 1.5rem 0 1.5rem;
         }
 
         h2{
@@ -93,16 +95,17 @@
             flex-direction: row;
             justify-content: center;
             align-items: center;
-            padding: 1.5rem;
+            margin-right: 1.5rem;
 
             @media (max-width: 1400px){
                 flex-direction: column;
-                padding: .5rem;
+                margin-right: 0;
             }
         }
     }
 
     #aboutSection-extra{
+        padding: 1.5rem;
         transition: 0.2s;
         &.extraHidden{
             max-width: 0;
