--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,7 +2,7 @@
  * @Author: David M. Rojas Gonzalez // davidr.info 
  * @Date: 2019-03-04 19:15:35 
  * @Last Modified by: David M. Rojas Gonzalez // deznorth.com
- * @Last Modified time: 2019-03-05 14:31:57
+ * @Last Modified time: 2019-03-05 14:40:01
 */
 @import '../../colors';
 
@@ -50,6 +50,11 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        ul{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+        }
       .header-link{
         text-decoration: none;
         color: $color-txt-onDark;
@@ -57,6 +62,7 @@
         margin-right: 2rem;
         background: none;
         border: none;
+        padding: 0;
 
         &:hover{
             color: $color-secondary;
